子页面下移10px，相对父页面缩进0px

--- a/widget/css/newpatient.css
+++ b/widget/css/newpatient.css
@@ -1,7 +1,7 @@
 header {
     position: fixed;
     left: 0px;
-    top: 20px;
+    top: 30px;
     width: 100%;
     color: #FFF;
     margin-left: 20px;
@@ -20,6 +20,7 @@ div {
 html body {
     height: 100%;
     margin: 20px;
+    margin-top: 30px;
     border: 0;
     padding: 0;
     display: -webkit-box;
@@ -32,9 +33,9 @@ html body {
 
 html body {
     background-color: rgba(0, 0, 0, 0);
-    -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, .5);
-    -moz-box-shadow: 0 0 30px rgba(0, 0, 0, .5);
-    box-shadow: 0 0 30px rgba(0, 0, 0, .5);
+    -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, .7);
+    -moz-box-shadow: 0 0 30px rgba(0, 0, 0, .7);
+    box-shadow: 0 0 30px rgba(0, 0, 0, .7);
 }
 
 a,
