--- a/widget/css/patient.css
+++ b/widget/css/patient.css
@@ -1,12 +1,12 @@
 header {
-    position: fixed;
+    position: absolute;
     left: 0px;
     top: 30px;
     width: 100%;
     color: #FFF;
-    margin-left: 20px;
-    margin-right: 20px;
-    
+    margin-left: 10px;
+    margin-right: 10px;
+
     height: 50px;
     line-height: 50px;
 }
@@ -19,7 +19,7 @@ div {
 
 html body {
     height: 100%;
-    margin: 20px;
+    margin: 10px;
     margin-top: 30px;
     border: 0;
     padding: 0;
@@ -47,14 +47,14 @@ a:visited {
     display: -webkit-box;
     height: 50px;
     line-height: 50px;
-    margin-right: 40px;
+    margin-right: 20px;
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #7A6D67), color-stop(1, #59504B));
     background-image: -webkit-linear-gradient(top, #7A6D67 0%, #59504B 100%);
     background-image: linear-gradient(to bottom, #7A6D67 0%, #59504B 100%);
 }
 
 #left {
-    width: 50px;
+    width: 60px;
 }
 
 #left>span {
@@ -76,7 +76,7 @@ a:visited {
 }
 
 #right {
-    width: 50px;
+    width: 60px;
 }
 
 #right>span {
