--- a/widget/css/history.css
+++ b/widget/css/history.css
@@ -71,9 +71,9 @@ a:visited {
     padding-left: 10px;
     padding-right: 10px;
     color: #655A55;
-    border-bottom: 1px;
+/*    border-bottom: 1px;
     border-style: solid;
-    border-color: #EED6B0;
+    border-color: #EED6B0;*/
 }
 
 .no_underline {
@@ -86,13 +86,16 @@ a:visited {
 
 .more {
     float: right;
+    /*border: 1px solid #655A55;*/
 }
 
 input {
     margin-left: 10px;
-    width: 200px;
+    width: 300px;
     overflow-x: visible;
     overflow-y: visible;
+    /*-webkit-border-radius: 5px;*/
+    border-bottom: 1px dashed #EED6B0;
 }
 
 #info {
@@ -100,24 +103,38 @@ input {
     margin-right: 10px;
 }
 
+textarea {
+    /*margin-left: 10px;*/
+    width: 100%;
+    height: 85px;
+    /*background-color: #FFF;*/
+    border-bottom: 1px dashed #EED6B0;
+    /*-webkit-border-radius: 5px;*/
+    resize: none;
+}
+
 .textarea {
+    height: 150px;
+}
+
+/*.textarea {
     width: 100%;
     min-height: 40px;
     max-height: 4000px;
-    /*_height: 120px;*/
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
-    /*padding: 3px;*/
+    _height: 120px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 3px;
     outline: 0;
-    /*border: 1px solid #a0b3d6;*/
+    border: 1px solid #a0b3d6;
     font-size: 16px;
     line-height: 30px;
-    /*padding: 2px;*/
+    padding: 2px;
     word-wrap: break-word;
     overflow-x: hidden;
     overflow-y: auto;
     background: #F7F3EA;
     border-bottom: 1px #EED6B0 solid;
-    /*border-color: rgba(82, 168, 236, 0.8);*/
-    /*box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);*/
-}
+    border-color: rgba(82, 168, 236, 0.8);
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
+}*/
