--- a/widget/css/login.css
+++ b/widget/css/login.css
@@ -37,7 +37,8 @@ body {
   box-shadow: 0 .5px #7a6d67 inset, 0 0 20px 5px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   position: relative;
-  width: 320px;
+  /*width: 320px;*/
+  width: 88%;
   height: 350px;
   margin: 120px auto 20px auto;
   padding: 50px 30px 0 30px;
