登录页面中间窗口的margin-top改成35%

--- a/widget/css/login.css
+++ b/widget/css/login.css
@@ -40,7 +40,7 @@ body {
   /*width: 320px;*/
   width: 88%;
   height: 350px;
-  margin: 120px auto 20px auto;
+  margin: 35% auto 0px auto;
   padding: 50px 30px 0 30px;
   text-align: center;
 }
