修改body的背景色

--- a/widget/css/history.css
+++ b/widget/css/history.css
@@ -23,7 +23,7 @@ html {
 }
 
 body {
-    background-color: #C3AD7E;
+    background-color: #B3A689;
     color: #655A55;
     margin: 50px 0px 0px 0px;
     font-family: 'Lato', sans-serif;
