--- a/widget/css/historyModi.css
+++ b/widget/css/historyModi.css
@@ -34,7 +34,7 @@ header {
     left: 0;
     top: 0;
     width: 100%;
-    color: #F7F3EA;
+    color: #FFF;
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #7A6D67), color-stop(1, #59504B));
     background-image: -webkit-linear-gradient(top, #7A6D67 0%, #59504B 100%);
     background-image: linear-gradient(to bottom, #7A6D67 0%, #59504B 100%);
@@ -63,17 +63,17 @@ a:visited {
 
 .groupName {
     padding: 10px 10px 0px 10px;
-    color: #F7F3EA;
+    color: #FFF;
 }
 
 .subGroupName {
     padding: 5px 5px 0px 5px;
-    color: #F7F3EA;
+    color: #FFF;
 }
 
 .group {
     margin: 10px;
-    background-color: #F7F3EA;
+    background-color: #FFF;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border: 1px solid #EED6B0;
@@ -120,7 +120,7 @@ a:visited {
 
 .key {
     width: 30%;
-    background-color: #F7F3EA
+    background-color: #FFF
 }
 
 .value {
@@ -131,7 +131,7 @@ a:visited {
 .more {
     font-size: 14px;
     text-align: right;
-    background-color: #F7F3EA
+    background-color: #FFF
 }
 
 .value_with_unit {
