--- a/widget/css/history.css
+++ b/widget/css/history.css
@@ -23,7 +23,7 @@ html {
 }
 
 body {
-    background-color: #B3A689;
+    background-color: #B1A686;
     color: #655A55;
     margin: 50px 0px 0px 0px;
     font-family: 'Lato', sans-serif;
@@ -34,7 +34,7 @@ header {
     left: 0;
     top: 0;
     width: 100%;
-    color: #F7F3EA;
+    color: #E2D9C6;
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #7A6D67), color-stop(1, #59504B));
     background-image: -webkit-linear-gradient(top, #7A6D67 0%, #59504B 100%);
     background-image: linear-gradient(to bottom, #7A6D67 0%, #59504B 100%);
@@ -63,20 +63,20 @@ a:visited {
 
 .groupName {
     padding: 10px 10px 0px 10px;
-    color: #F7F3EA;
+    color: #E2D9C6;
 }
 
 .subGroupName {
     padding: 5px 5px 0px 5px;
-    color: #F7F3EA;
+    color: #E2D9C6;
 }
 
 .group {
     margin: 10px;
-    background-color: #F7F3EA;
+    background-color: #E2D9C6;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    border: 1px solid #EED6B0;
+    border: 1px solid #BFBFBF;
     border-radius: 5px;
 }
 
@@ -87,7 +87,7 @@ a:visited {
     padding-left: 10px;
     padding-right: 10px;
     color: #655A55;
-    border-bottom: 1px solid #EED6B0;
+    border-bottom: 1px solid #BFBFBF;
     display: -webkit-box;
 }
 
@@ -95,7 +95,7 @@ a:visited {
     width: 50%;
     display: -webkit-box;
     margin-right: 4px;
-    border-right: 1px solid #EED6B0;
+    border-right: 1px solid #BFBFBF;
 }
 
 .rightColumn {
@@ -120,6 +120,7 @@ a:visited {
 
 .key {
     width: 30%;
+    font-weight: bold;
 }
 
 .more {
@@ -142,6 +143,7 @@ a:visited {
 
 .textarea_key {
     width: 100%;
+    font-weight: bold;
 }
 
 .textarea_value {
@@ -153,7 +155,7 @@ input {
     font-size: 17px;
     overflow-x: visible;
     overflow-y: visible;
-    background-color: #F7F3EA;
+    background-color: #E2D9C6;
     border: none;
     text-align: right;
 }
@@ -163,7 +165,7 @@ textarea {
     height: 80px;
     border: none;
     resize: none;
-    background-color: #F7F3EA;
+    background-color: #E2D9C6;
     font-size: 17px;
     padding: 0px;
 }
