--- a/widget/css/history.css
+++ b/widget/css/history.css
@@ -42,6 +42,11 @@ header {
     height: 50px;
     line-height: 50px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+    z-index: 5;
+}
+
+#main {
+    z-index: 0;
 }
 
 a,
