--- a/widget/css/button.css
+++ b/widget/css/button.css
@@ -21,29 +21,28 @@
     border-style: solid;
     border-width: 1px;
     line-height: 30px;
-    background: -webkit-gradient(linear, left top, left bottom, from(#f6f6f6), to(#e1e1e1));
-    background: linear-gradient(#f6f6f6, #e1e1e1);
-    -webkit-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3), 0 1px 2px rgba(0, 0, 0, 0.15);
-    box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3), 0 1px 2px rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: inset 0px 0px 1px rgba(255, 255, 255, 0.6), 0px 0px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0px 0px 1px rgba(255, 255, 255, 0.6), 0px 0px 1px rgba(0, 0, 0, 0.05);
 }
 
 .button-raised:active,
 .button-raised.active,
 .button-raised.is-active {
-    background: #eeeeee;
-    -webkit-box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.2), 0px 1px 0px white;
-    box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.2), 0px 1px 0px white;
+    /*background: #eeeeee;*/
+    -webkit-box-shadow: inset 0px 0px 1px rgba(0, 0, 0, 0.5), 0px 0px 1px #aaa;
+    box-shadow: inset 0px 0px 1px rgba(0, 0, 0, 0.5), 0px 0px 1px #aaa;
 }
 
 .button-raised.button-royal {
-    border-color: #000;
-    background: -webkit-gradient(linear, left top, left bottom, from(#7A6D67), to(#59504B));
-    background: linear-gradient(#7A6D67, #59504B);
+    border-color: #333;
+/*    background: -webkit-gradient(linear, left top, left bottom, from(#7A6D67), to(#59504B));
+    background: linear-gradient(#7A6D67, #59504B);*/
+    background: rgba(0,0,0,0);
 }
 
 .button-raised.button-royal:active,
 .button-raised.button-royal.active,
 .button-raised.button-royal.is-active {
-    border-color: #7A6D67;
-    background: #655b55;
+    /*border-color: #7A6D67;*/
+    background: #7A6D67;
 }
