上一个commit漏提交文件

--- a/widget/css/picker.css
+++ b/widget/css/picker.css
@@ -9,6 +9,8 @@ html body {
     -webkit-flex-flow: column;
     flex-flow: column;
     background-color: #F7F3EA;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: transparent;;
 }
 
 header {
