--- a/widget/css/history.css
+++ b/widget/css/history.css
@@ -20,6 +20,8 @@ html {
     padding: 0px;
     margin: 0px;
     border: 0px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: transparent;;
 }
 
 body {
@@ -107,6 +109,14 @@ a:visited {
     /*border: 1px solid #f0f0f0;*/
     border-radius: 5px;
     box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
+}
+
+.group.group-view:hover {
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
+}
+
+.group.group-edit:hover {
+    box-shadow: inset 0px 0px 9px rgba(0,0,0,0.5);
 }
 
 .field {
