--- a/widget/css/history.css
+++ b/widget/css/history.css
@@ -161,12 +161,18 @@ a:visited {
 
 .accessory_img {
     display: inline;
+    overflow: hidden;
 }
 
 .accessory_img>img {
     margin: 0px 5px;
-    height: 70px;
-    width: 70px;
+    /*border: 1px solid #424758;*/
+    /*height: 70px;*/
+    /*width: 70px;*/
+    max-height: 70px;
+    /*max-width: 70px;*/
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
+    /*overflow: hidden;*/
 }
 
 .bottom {
@@ -230,6 +236,11 @@ a:visited {
 .img_button {
     width: 30%;
     text-align: right;
+}
+
+.img_button>img {
+    width: 35px;
+    vertical-align: middle;
 }
 
 input {
