--- a/widget/css/history.css
+++ b/widget/css/history.css
@@ -109,7 +109,7 @@ a:visited {
     -moz-border-radius: 5px;
     border: 1px solid #D5D7DC;
     border-radius: 5px;
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.9);
+    box-shadow: 0px 0px 1px rgba(0,0,0,0.5);
 }
 
 .group.group-view:hover {
@@ -126,11 +126,11 @@ a:visited {
 }
 
 .field {
-    height: 45px;
-    font-size: 16px;
-    line-height: 45px;
-    padding-left: 10px;
-    padding-right: 10px;
+    height: 60px;
+    font-size: 18px;
+    line-height: 60px;
+    /*padding-left: 10px;*/
+    /*padding-right: 10px;*/
     /*color: #424758;*/
     color: #6D7386;
     border-bottom: 1px solid #f0f0f0;
@@ -138,7 +138,7 @@ a:visited {
 }
 
 .field.field-edit:hover {
-    box-shadow: inset 0px 0px 3px rgba(0,0,0,0.5);
+    box-shadow: inset 0px 0px 1px rgba(0,0,0,0.5);
     border-radius: 5px;
 }
 
@@ -186,18 +186,30 @@ a:visited {
     border: none;
 }
 
+.key_icon_div {
+    width: 60px;
+    border-right: 1px solid #F0F0F0;
+    text-align: center;
+}
+
+.key_icon_div img {
+    vertical-align: middle;
+    width: 30px;
+}
+
 .key {
-    width: 30%;
-    /*font-weight: bold;*/
+    margin-left: 10px;
+    width: 90px;
 }
 
 .more {
-    font-size: 14px;
+    font-size: 16px;
     text-align: right;
 }
 
 .value {
-    width: 67%;
+    -webkit-box-flex: 1;
+    margin-right: 10px;
 }
 
 .value_with_unit {
@@ -252,7 +264,7 @@ a:visited {
 
 input {
     width: 100%;
-    font-size: 16px;
+    font-size: 18px;
     overflow-x: visible;
     overflow-y: visible;
     background-color: #FFF;
@@ -263,11 +275,11 @@ input {
 
 textarea {
     width: 100%;
-    height: 30px;
+    height: 40px;
     border: none;
     resize: none;
     background-color: #FFF;
-    font-size: 16px;
+    font-size: 18px;
     padding: 0px;
     /*font-weight: bold;*/
 }
