--- a/widget/css/history.css
+++ b/widget/css/history.css
@@ -22,7 +22,7 @@ html {
     margin: 0px;
     border: 0px;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
-    -webkit-tap-highlight-color: transparent;;
+    -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -127,6 +127,7 @@ a:visited {
     color: #6D7386;
     border-bottom: 1px solid #f0f0f0;
     display: -webkit-box;
+    padding-right: 10px;
 }
 
 .onFieldClick {
