新增注册页面, 新增病历和随访界面增加体检和辅助检查的提示信息

--- a/widget/css/history.css
+++ b/widget/css/history.css
@@ -95,6 +95,13 @@ a:visited {
     font-weight: bold;
 }
 
+.remark {
+    padding: 10px 0px 15px 10px;
+    color: #93979e;
+    font-size: 14px;
+    text-align: center;
+}
+
 .subGroupName {
     padding: 5px 5px 0px 5px;
     color: #93979e;
