--- a/widget/css/login.css
+++ b/widget/css/login.css
@@ -39,7 +39,7 @@ body {
   position: relative;
   width: 300px;
   /*width: 88%;*/
-  height: 350px;
+  /*height: 350px;*/
   margin: 120px auto 0px auto;
   padding: 50px 30px 0 30px;
   text-align: center;
@@ -86,11 +86,18 @@ body {
   padding-bottom: 13px;
   box-shadow: 0 -1px 0 #e0e0e0 inset, 0 1px 2px rgba(0, 0, 0, 0.23) inset;
 }
-.login-form input[type="password"] {
+.login-form input[name="password"] {
+  border-top: none;
+  border-bottom: none;
+  border-radius: 0.1px 0.1px 0.1px 0.1px;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.23) inset, 0 1px 1px rgba(255, 255, 255, 0.1);
+}
+.login-form input[name="password_bottom"] {
   border-top: none;
   border-radius: 0 0 4px 4px;
-  box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.23) inset, 0 1px 2px rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.23) inset, 0 1px 2px rgba(255, 255, 255, 0.1);
 }
+
 .login-form input[type="button"] {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
