--- a/widget/css/login.css
+++ b/widget/css/login.css
@@ -22,6 +22,7 @@ body {
   font-family: 'Lato', sans-serif;
   height: 100%;
   line-height: 100%;
+  vertical-align: middle;
 }
 
 .login-form-wrap {
@@ -36,13 +37,16 @@ body {
   border: 1px solid #355493;
   box-shadow: 0 .5px #5170AD inset, 0 0 10px 5px rgba(0, 0, 0, 0.3);
   border-radius: 5px;
-  position: relative;
   width: 300px;
-  /*width: 88%;*/
-  /*height: 350px;*/
-  margin: 120px auto 0px auto;
+  height: 350px;
+  margin: auto;
+  position: absolute;  
+  top: 0; left: 0; bottom: 0; right: 0;  
   padding: 50px 30px 0 30px;
   text-align: center;
+}
+.signup-form-wrap {
+  height: 400px;
 }
 .login-form-wrap:before {
   background: url(widget://image/0vLxyVB.png);
